Fix reader overflow

--- a/src/apps/reader/reader.less
+++ b/src/apps/reader/reader.less
@@ -21,7 +21,7 @@
   background: #808080;
   overflow: hidden;
   flex: 1;
-  height: 100%;
+  min-height: 100%;
 }
 
 .ui95__reader-page {
